--- a/Trabajo practico 2 /.project
+++ b/Trabajo practico 2 /.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tp 1</name>
+	<name>Trabajo practico 2 </name>
 	<comment></comment>
 	<projects>
 	</projects>
