--- a/SEVALASEGUNDITA/.project
+++ b/SEVALASEGUNDITA/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Trabajo practico 2 </name>
+	<name>SEVALASEGUNDITA</name>
 	<comment></comment>
 	<projects>
 	</projects>
